style.css
body{
    padding: 0;
    margin:0;
    font-family: Helvetica;

}

#header{
    position: fixed;
    top:0px;
    left:0px;
    z-index: 500;
    width: 100%;
    height: 80px;
    background-image: url(images/wood-bg.png);
    background-repeat: repeat-x;
}

#header img{
    display: block;
    margin: auto;
    height: 70%;
    padding-top: 15px;
}

#TopMenuBar{
    position: fixed;
    top: 80px;
    Left:0;
    width: 100%;
    z-index: 500;
    background-color: forestgreen;
    height: 40px;

}

#TopMenuBar a{
    display: block;
    float: left;
    width: 33%;
    height: 35px;
    font-weight: 700;
    color: white;
    text-align: center;
    text-decoration: none;
    padding-top: 12px;

}

#MapPic{
    margin-top:  120px;

}

#BottMenuBar{
    position: fixed;
    bottom:0;
    Left:0;
    z-index: 500;
    height: 40px;
    width: 100%;
    background-color: forestgreen;
    height: 40px;
}

#BottMenuBar a{
    float: left;
    display: block;
    width: 50%;
    font-weight: 700;
    height: 35px;
    text-decoration:none;
    text-align: center;
    color: white;
    padding-top: 12px;
}

#Main{
    margin-top: 119px;
    background-image: url(images/map-blur.png);
    background-repeat: repeat;
    width: 100%;
    min-height: calc(100dvh -80px);
}

#content{
    padding-top: 1px;
    padding-bottom: 50px;

}

.info-box{

    text-decoration: none;
    background: rgba(255, 255, 255, .8);
    display: block;
    margin: auto;
    height: 90px;
    width: 90%;
    margin-top: 12px;
    padding: 1px;

}

.info-box img{
   float: left;
   height: 70px;
   margin: 10px;

}

.info-box .right{
    float: right;
    margin-top: 25px;
    height: 40px;


}

.info-box h3{
    color: brown;
    
}

.info-box p{
    color: black;
}


#info-box-animal{
    background: rgba(255, 255, 255, .8);
    width: 90%;
    display: block;
    margin: 20px auto;
    margin-bottom: 12px;
    margin-bottom: 12px;
    padding: 10px; 
    
}

#info-box-animal img{
    width: 100%;
   
}

#info-box-animal h3{
    text-align: center;
}

img.info-box-weather-icon{
    float: left;
    height: 30px;
    width: 30px !important;
    margin: 10px;
}

h1.info-box-weather-icon{
    font-size:65px;
    font-weight: 200;
    padding: 0;
    margin: 0;
}

table{
    width: 100%;
}

td{
    border-top: 1px solid #131313;
}

input{
    width: 100%;
    height: 35px;
    margin: 10px 0;
    
}

textarea{
    
    width: 100%;
    height: 55px;
    margin: 10px 0;
}

.button{
    text-decoration: none;
    font-weight: 600;
    color: white;
    background-color: forestgreen;
    display: block;
    padding-left: 300px;
    padding-top: 10px;
    height: 30px;
}

